# TCSystem

./: .gitignore  .hgignore  AUTHORS  CMakeLists.txt  COPYRIGHT  Confix2.dir  Confix2.pkg  TCSystem.pc.in  TCSystemAudio.pc.in  TCSystemGui.pc.in  TCSystemNet.pc.in  create_android.bat  create_linux.sh  create_win64.bat  setup.bat
Modules/: CMakeLists.txt
Modules/Audio/: CMakeLists.txt  Confix2.dir  TCAudioApi.h  TCAudioChangePanTask.cpp  TCAudioChangePanTask.h  TCAudioChangePitchTask.h  TCAudioOpenAL.h  TCAudioOpenALHandler.cpp  TCAudioOpenALHandler.h  TCAudioSoundDataCompound.h  TCAudioSoundDataMultitrack.h  TCAudioSoundDataWav.cpp  TCAudioSoundDataWav.h  TCAudioSoundFormat.h  TCAudioSoundImp.cpp  TCAudioSoundMultitrackImp.cpp  TCAudioSoundMultitrackImp.h  TCAudioSoundPlayer.h  TCAudioSoundSequenceImp.cpp  TCAudioSoundSequenceImp.h  TCAudioStreamingThread.h
Modules/Audio/inc/: TCAudioApi.h  TCAudioManager.h  TCAudioSound.h  TCAudioSoundCompound.h  TCAudioSoundFormat.h
Modules/Audio/src/: TCAudioChangePanTask.cpp  TCAudioChangePanTask.h  TCAudioChangePitchTask.cpp  TCAudioChangePitchTask.h  TCAudioChangeSoundValueTask.cpp  TCAudioChangeSoundValueTask.h  TCAudioChangeVolumeTask.cpp  TCAudioChangeVolumeTask.h  TCAudioDebugNew.cpp  TCAudioManager.cpp  TCAudioOpenAL.h  TCAudioOpenALHandler.cpp  TCAudioOpenALHandler.h  TCAudioSoundData.h  TCAudioSoundDataCompound.cpp  TCAudioSoundDataCompound.h  TCAudioSoundDataMapper.h  TCAudioSoundDataMp3.cpp  TCAudioSoundDataMp3.h  TCAudioSoundDataMultitrack.cpp  TCAudioSoundDataMultitrack.h  TCAudioSoundDataOgg.cpp  TCAudioSoundDataOgg.h  TCAudioSoundDataSequence.cpp  TCAudioSoundDataSequence.h  TCAudioSoundDataWav.cpp  TCAudioSoundDataWav.h  TCAudioSoundImp.cpp  TCAudioSoundImp.h  TCAudioSoundMultitrackImp.cpp  TCAudioSoundMultitrackImp.h  TCAudioSoundPlayer.h  TCAudioSoundSequenceImp.cpp  TCAudioSoundSequenceImp.h  TCAudioStreamingTask.cpp  TCAudioStreamingTask.h  TCAudioStreamingThread.cpp  TCAudioStreamingThread.h  TCAudioUtil.h
Modules/Basic/: CMakeLists.txt  Confix2.dir  TCBinaryCodec.cpp  TCBz2FileStream.cpp  TCDebugHeap.h  TCException.cpp  TCFile.cpp  TCFileNameImp.h  TCGzFileStream.cpp  TCGzFileStream.h  TCHeapCrtlib.h  TCInterlocked.cpp  TCMemoryMappedFilePosix.cpp  TCMemoryStream.cpp  TCRng69069.h  TCStreamBase.cpp  TCStringStream.cpp  TCStringStream.h  TCTime.cpp  TCUtil.cpp  TCWStringTraits.h
Modules/Basic/Tests/: Confix2.dir  TCBasicTestSuite.cpp  TCFileNameTest.h  TCStreamTest.cpp  TCStringTest.cpp  TCUtilTest.cpp  TCUtilTest.h  TCWFileNameTest.cpp  TCWStringTest.h
Modules/Basic/inc/: TCApplication.h  TCAssert.h  TCCodec.h  TCDebugNew.h  TCDefines.h  TCDelete.h  TCException.h  TCFactory.h  TCFile.h  TCFileName.h  TCHashTable.h  TCHeap.h  TCInterlocked.h  TCMLSHandler.h  TCMemoryMappedFile.h  TCNew.h  TCNewDisable.h  TCNewEnable.h  TCNonCopyable.h  TCOutput.h  TCRng.h  TCScopedArray.h  TCScopedPtr.h  TCSharedPtr.h  TCSharedPtrFromThis.h  TCSharedPtrImpl.h  TCStlAlgorithm.h  TCStlTypes.h  TCStream.h  TCStreamAble.h  TCString.h  TCSystem.h  TCTime.h  TCTypes.h  TCUnitApi.h  TCUnitCleanLiness.h  TCUnitFailure.h  TCUnitSimpleTestResult.h  TCUnitTest.h  TCUnitTestCase.h  (+10 more)
Modules/Basic/src/: TCApplication.cpp  TCAsciiCodec.cpp  TCAsciiCodec.h  TCBinaryCodec.cpp  TCBinaryCodec.h  TCBz2FileStream.cpp  TCBz2FileStream.h  TCClock.cpp  TCClock.h  TCDebugHeap.cpp  TCDebugHeap.h  TCDebugNew.cpp  TCException.cpp  TCFactory.cpp  TCFile.cpp  TCFileName.cpp  TCFileNameImp.h  TCFilePosix.cpp  TCFileStream.cpp  TCFileStream.h  TCFileWin32.cpp  TCGzFileStream.cpp  TCGzFileStream.h  TCHeapCrtlib.cpp  TCHeapCrtlib.h  TCHeapMutex.h  TCInterlocked.cpp  TCMLSHandler.cpp  TCMemoryMappedFilePosix.cpp  TCMemoryMappedFilePosix.h  TCMemoryMappedFileWin32.cpp  TCMemoryMappedFileWin32.h  TCMemoryStream.cpp  TCMemoryStream.h  TCNew.cpp  TCOutput.cpp  TCRng69069.cpp  TCRng69069.h  TCSettings.cpp  TCSettings.h  (+21 more)
Modules/Basic/tests/: TCBasicTestSuite.cpp  TCBasicTestSuite.h  TCFileNameTest.cpp  TCFileNameTest.h  TCHashTableTest.cpp  TCHashTableTest.h  TCStreamTest.cpp  TCStreamTest.h  TCStringTest.cpp  TCStringTest.h  TCTimeTest.cpp  TCTimeTest.h  TCUtilTest.cpp  TCUtilTest.h  TCWFileNameTest.cpp  TCWFileNameTest.h  TCWStringTest.cpp  TCWStringTest.h
Modules/GUI/: CMakeLists.txt  TCGuiActionBox.h  TCGuiApi.h  TCGuiImageHandler.cpp  TCGuiImages.cpp  TCGuiMenu.cpp  TCGuiMessageBox.cpp  TCGuiShutterMenu.cpp  TCGuiWindow.cpp  TCGuiWindow.h
Modules/GUI/images/: images.h
Modules/GUI/inc/: TCGuiActionBox.h  TCGuiApi.h  TCGuiApplication.h  TCGuiBase.h  TCGuiButton.h  TCGuiLabel.h  (+8 more)
Modules/Math/: CMakeLists.txt
Modules/Net/: CMakeLists.txt  TCNetAddress.cpp  TCNetSSLSocket.cpp
Modules/OpenGL/: CMakeLists.txt  TCOpenGL.h  TCOpenGLFace.h  TCOpenGLLineRenderer.cpp  TCOpenGLLineRenderer.h  TCOpenGLObject2D.h  TCOpenGLObject3D.h  TCOpenGLTextRenderer.cpp  TCOpenGLTextRenderer.h  TCOpenGLTypes.h  TCOpenGLUtil.cpp  TCOpenGLViewer.cpp
Modules/Thread/: CMakeLists.txt  TCMTCommandExecutionThread.h  TCMTConditionPthread.cpp  TCMTConditionWin32.cpp  TCMTEventPthread.cpp  TCMTEventPthread.h  TCMTMutexPthread.cpp  TCMTThreadPthread.cpp  TCMTThreadWin32.h
Programs/MathSheet/: CMakeLists.txt  MathSheet.cpp
Programs/PSK2Hausbuch/: CMakeLists.txt  psk2hausbuch.cpp
Tests/AudioTest/: CMakeLists.txt  audio_test.cpp
Tests/RegexTest/: CMakeLists.txt  TCRegexTest.cpp
Tests/TestBasic/: CMakeLists.txt  testBasic.cpp
Tests/UnitTests/: CMakeLists.txt  TCUnitTest.cpp
doc/: CMakeLists.txt  doxygen.doxygen  footer  tcsystem_doxygen.txt
src/GUI/: CMakeLists.txt  Confix2.dir  TCGuiActionBox.cpp  TCGuiActionBox.h  TCGuiApi.h  TCGuiApplication.cpp  TCGuiApplication.h  TCGuiBase.cpp  TCGuiBase.h  TCGuiButton.cpp  TCGuiButton.h  TCGuiDebugNew.cpp  TCGuiDialogBox.cpp  TCGuiDialogBox.h  TCGuiImageHandler.cpp  TCGuiImageHandler.h  TCGuiLabel.cpp  TCGuiLabel.h  TCGuiMLS.cpp  TCGuiMenu.cpp  TCGuiMenu.h  TCGuiMessageBox.cpp  TCGuiMessageBox.h  TCGuiShutterMenu.cpp  TCGuiShutterMenu.h  TCGuiTreeList.cpp  TCGuiTreeList.h  TCGuiWidget.cpp  TCGuiWidget.h  TCGuiWindow.cpp  TCGuiWindow.h
(+533 files in other folders)
