if (TCSYSTEM_ALL)
  add_subdirectory (Basic)
  add_subdirectory (Thread)
  add_subdirectory (Net)
  add_subdirectory (Math)
  add_subdirectory (Audio)
  if (NOT ANDROID)
    add_subdirectory (GUI)
    add_subdirectory (OpenGL)
  endif()
else()
  if (TCSYSTEM_BASIC)
    add_subdirectory (Basic)
  endif()
  if (TCSYSTEM_MATH)
    add_subdirectory (Math)
  endif()
  if (TCSYSTEM_NET)
    add_subdirectory (Net)
  endif()
  if (TCSYSTEM_AUDIO)
    add_subdirectory (Audio)
  endif()
  if (TCSYSTEM_THREAD)
    add_subdirectory (Thread)
  endif()
endif()
